--- a/notebooks/02_eqelm_demonstration.ipynb
+++ b/notebooks/02_eqelm_demonstration.ipynb
@@ -11,18 +11,12 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 1 : Titre et introduction\n",
-    "# Hybrid NeuroSymbolic CeNN - Démonstration Conceptuelle\n",
-    "*Ce notebook démontre notre architecture originale CeNN pour l'émulation quantique*\n",
+    "print(\"🔬 Démonstration de l'EQELM (Emulated Quantum Extreme Learning Machine)\")\n",
+    "print(\"Implémentation basée sur la littérature analysée dans notre revue\")\n",
     "\n",
-    "```python\n",
-    "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from implementations.cenn.cenn_architecture import NeuroSymbolicCeNN\n",
-    "\n",
-    "print(\"🚀 Démonstration du CeNN Neuro-Symbolique Hybride\")\n",
-    "print(\"Notre contribution originale à la revue systématique\")"
+    "from implementations.qelm.eqelm_implementation import EQELM"
    ]
   },
   {
@@ -36,18 +30,8 @@
    },
    "outputs": [],
    "source": [
-    "# Cell 1 : Titre et introduction\n",
-    "# Hybrid NeuroSymbolic CeNN - Démonstration Conceptuelle\n",
-    "*Ce notebook démontre notre architecture originale CeNN pour l'émulation quantique*\n",
-    "\n",
-    "```python\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from implementations.cenn.cenn_architecture import NeuroSymbolicCeNN\n",
-    "\n",
-    "print(\"🚀 Démonstration du CeNN Neuro-Symbolique Hybride\")\n",
-    "print(\"Notre contribution originale à la revue systématique\")"
+    "print(\"📊 Chargement des données synthétiques...\")\n",
+    "from data.synthetic.generate_data import generate_mackey_glass"
    ]
   },
   {
@@ -61,14 +45,8 @@
    },
    "outputs": [],
    "source": [
-    "# Création du modèle CeNN\n",
-    "grid_size = 32\n",
-    "model = NeuroSymbolicCeNN(grid_size=grid_size, state_size=4)\n",
-    "\n",
-    "print(f\"Architecture CeNN créée:\")\n",
-    "print(f\"- Taille de grille: {grid_size}x{grid_size}\")\n",
-    "print(f\"- États par cellule: 4\")\n",
-    "print(f\"- Paramètres entraînables: {sum(p.numel() for p in model.parameters()):,}\")"
+    "data = generate_mackey_glass(2000)\n",
+    "print(f\"Données générées: {len(data)} points\")"
    ]
   },
   {
@@ -82,17 +60,15 @@
    },
    "outputs": [],
    "source": [
-    "# État initial représentant une superposition quantique\n",
-    "initial_state = torch.randn(1, 4, grid_size, grid_size)\n",
+    "window_size = 15\n",
+    "X, y = [], []\n",
     "\n",
-    "print(\"🧪 Émulation de l'évolution quantique...\")\n",
-    "states = [initial_state]\n",
-    "with torch.no_grad():\n",
-    "    for step in range(8):\n",
-    "        new_state = model(states[-1])\n",
-    "        states.append(new_state)\n",
+    "for i in range(len(data) - window_size):\n",
+    "    X.append(data[i:i+window_size])\n",
+    "    y.append(data[i+window_size])\n",
     "\n",
-    "print(f\"✓ Évolution simulée sur {len(states)} steps\")"
+    "X, y = np.array(X), np.array(y)\n",
+    "print(f\"Échantillons créés: {len(X)} fenêtres de taille {window_size}\")\n"
    ]
   },
   {
@@ -106,20 +82,13 @@
    },
    "outputs": [],
    "source": [
-    "# Visualisation des états\n",
-    "fig, axes = plt.subplots(2, 4, figsize=(15, 8))\n",
+    "print(\"🧠 Entraînement de l'EQELM...\")\n",
+    "model = EQELM(n_qubits=6, n_features=window_size)\n",
+    "model.fit(X, y)\n",
     "\n",
-    "for i, state in enumerate(states[:8]):\n",
-    "    ax = axes[i//4, i%4]\n",
-    "    im = ax.imshow(state[0, 0].numpy(), cmap='RdBu_r', vmin=-1, vmax=1)\n",
-    "    ax.set_title(f'Step {i}')\n",
-    "    ax.axis('off')\n",
-    "    plt.colorbar(im, ax=ax, fraction=0.046)\n",
-    "\n",
-    "plt.suptitle('Évolution des États CeNN - Émulation des Patterns Quantiques', fontsize=14)\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('../benchmarks/results/cenn_evolution.png', dpi=150, bbox_inches='tight')\n",
-    "plt.show()"
+    "predictions = model.predict(X)\n",
+    "mse = np.mean((predictions - y)**2)\n",
+    "print(f\"✓ EQELM entraîné - MSE: {mse:.6f}\")"
    ]
   },
   {
@@ -133,34 +102,15 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "\n",
-    "# Test de scalabilité\n",
-    "grid_sizes = [16, 32, 64, 128]\n",
-    "times = []\n",
-    "\n",
-    "print(\"📊 Analyse de performance et scalabilité\")\n",
-    "for size in grid_sizes:\n",
-    "    model_test = NeuroSymbolicCeNN(grid_size=size)\n",
-    "    x_test = torch.randn(1, 4, size, size)\n",
-    "    \n",
-    "    start_time = time.time()\n",
-    "    for _ in range(100):\n",
-    "        _ = model_test(x_test)\n",
-    "    end_time = time.time()\n",
-    "    \n",
-    "    avg_time = (end_time - start_time) / 100\n",
-    "    times.append(avg_time)\n",
-    "    print(f\"Grille {size}x{size}: {avg_time:.4f}s par itération\")\n",
-    "\n",
-    "# Visualisation de la scalabilité\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(grid_sizes, times, 'o-', linewidth=2, markersize=8)\n",
-    "plt.xlabel('Taille de Grille')\n",
-    "plt.ylabel('Temps par itération (s)')\n",
-    "plt.title('Scalabilité du CeNN Neuro-Symbolique\\n(Complexité Linéaire Démonstrée)')\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(y[:200], label='Valeurs réelles', alpha=0.7)\n",
+    "plt.plot(predictions[:200], label='Prédictions EQELM', alpha=0.7)\n",
+    "plt.xlabel('Temps')\n",
+    "plt.ylabel('Valeur')\n",
+    "plt.title('Prédictions EQELM sur série Mackey-Glass')\n",
+    "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
-    "plt.savefig('../benchmarks/results/cenn_scaling.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('../benchmarks/results/eqelm_predictions.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -175,17 +125,9 @@
    },
    "outputs": [],
    "source": [
-    "print(\"✅ Démonstration terminée avec succès!\")\n",
-    "print(\"\\n📈 Points clés démontrés:\")\n",
-    "print(\"   • Émulation de comportements quantiques avec des CeNN\")\n",
-    "print(\"   • Architecture neuro-symbolique pour l'interprétabilité\")\n",
-    "print(\"   • Scalabilité linéaire permettant de grandes simulations\")\n",
-    "print(\"   • Compatibilité GPU pour l'accélération matérielle\")\n",
-    "\n",
-    "print(f\"\\n💡 Applications potentielles:\")\n",
-    "print(\"   • Prévision de séries temporelles complexes\")\n",
-    "print(\"   • Simulation de systèmes quantiques à grande échelle\")\n",
-    "print(\"   • Calcul cognitif quantique inspiré\")"
+    "print(\"✅ Démonstration EQELM terminée!\")\n",
+    "print(\"L'EQELM montre comment l'émulation quantique peut être utilisée\")\n",
+    "print(\"pour l'apprentissage rapide sur des séries temporelles complexes\")"
    ]
   },
   {
